// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Legend > should correspond default layout 1`] = `
<div>
  <ul
    class="_legend_c11eeb"
    data-test-id="legend"
  >
    <li
      class="_legendItem_c11eeb"
      data-test-id="legend-item"
    >
      <div
        class="_seat_e52c81 _legendItemSeat_c11eeb _regular_e52c81 _free_e52c81"
        data-test-disabled="false"
        data-test-id="seat"
        data-test-selected="false"
      >
        <span
          class="_seatPlace_e52c81"
          data-test-id="seat-place"
        />
      </div>
      <small
        class="_legendItemName_c11eeb"
        data-test-id="legend-item-name"
      >
        N/A
      </small>
    </li>
    <li
      class="_legendItem_c11eeb"
      data-test-id="legend-item"
    >
      <div
        class="_seat_e52c81 _legendItemSeat_c11eeb _regular_e52c81 _selected_e52c81"
        data-test-disabled="false"
        data-test-id="seat"
        data-test-selected="true"
      >
        <span
          class="_seatPlace_e52c81"
          data-test-id="seat-place"
        />
      </div>
      <small
        class="_legendItemName_c11eeb"
        data-test-id="legend-item-name"
      >
        Selected
      </small>
    </li>
    <li
      class="_legendItem_c11eeb"
      data-test-id="legend-item"
    >
      <div
        class="_seat_e52c81 _legendItemSeat_c11eeb _occupied_e52c81 _free_e52c81"
        data-test-disabled="true"
        data-test-id="seat"
        data-test-selected="false"
      >
        <span
          class="_seatPlace_e52c81"
          data-test-id="seat-place"
        />
      </div>
      <small
        class="_legendItemName_c11eeb"
        data-test-id="legend-item-name"
      >
        Occupied
      </small>
    </li>
  </ul>
</div>
`;

exports[`Legend > should support the "seatTypes" prop 1`] = `
<div>
  <ul
    class="_legend_c11eeb"
    data-test-id="legend"
  >
    <li
      class="_legendItem_c11eeb"
      data-test-id="legend-item"
    >
      <div
        class="_seat_e52c81 _legendItemSeat_c11eeb _regular_e52c81 _free_e52c81"
        data-test-disabled="false"
        data-test-id="seat"
        data-test-selected="false"
      >
        <span
          class="_seatPlace_e52c81"
          data-test-id="seat-place"
        />
      </div>
      <div
        class="_legendItemWrap_c11eeb"
        data-test-id="legend-item-wrap"
      >
        <small
          class="_legendItemName_c11eeb"
          data-test-id="legend-item-name"
        >
          regular
        </small>
        <small
          class="_legendItemPrice_c11eeb"
          data-test-id="legend-item-price"
        >
          330
           RUB
        </small>
      </div>
    </li>
    <li
      class="_legendItem_c11eeb"
      data-test-id="legend-item"
    >
      <div
        class="_seat_e52c81 _legendItemSeat_c11eeb _comfort_e52c81 _free_e52c81"
        data-test-disabled="false"
        data-test-id="seat"
        data-test-selected="false"
      >
        <span
          class="_seatPlace_e52c81"
          data-test-id="seat-place"
        />
      </div>
      <div
        class="_legendItemWrap_c11eeb"
        data-test-id="legend-item-wrap"
      >
        <small
          class="_legendItemName_c11eeb"
          data-test-id="legend-item-name"
        >
          comfort
        </small>
        <small
          class="_legendItemPrice_c11eeb"
          data-test-id="legend-item-price"
        >
          380
           RUB
        </small>
      </div>
    </li>
    <li
      class="_legendItem_c11eeb"
      data-test-id="legend-item"
    >
      <div
        class="_seat_e52c81 _legendItemSeat_c11eeb _vip_e52c81 _free_e52c81"
        data-test-disabled="false"
        data-test-id="seat"
        data-test-selected="false"
      >
        <span
          class="_seatPlace_e52c81"
          data-test-id="seat-place"
        />
      </div>
      <div
        class="_legendItemWrap_c11eeb"
        data-test-id="legend-item-wrap"
      >
        <small
          class="_legendItemName_c11eeb"
          data-test-id="legend-item-name"
        >
          vip
        </small>
        <small
          class="_legendItemPrice_c11eeb"
          data-test-id="legend-item-price"
        >
          430
           RUB
        </small>
      </div>
    </li>
    <li
      class="_legendItem_c11eeb"
      data-test-id="legend-item"
    >
      <div
        class="_seat_e52c81 _legendItemSeat_c11eeb _wheelchair_e52c81 _free_e52c81"
        data-test-disabled="false"
        data-test-id="seat"
        data-test-selected="false"
      >
        <span
          class="_seatPlace_e52c81"
          data-test-id="seat-place"
        />
      </div>
      <div
        class="_legendItemWrap_c11eeb"
        data-test-id="legend-item-wrap"
      >
        <small
          class="_legendItemName_c11eeb"
          data-test-id="legend-item-name"
        >
          wheelchair
        </small>
        <small
          class="_legendItemPrice_c11eeb"
          data-test-id="legend-item-price"
        >
          230
           RUB
        </small>
      </div>
    </li>
    <li
      class="_legendItem_c11eeb"
      data-test-id="legend-item"
    >
      <div
        class="_seat_e52c81 _legendItemSeat_c11eeb _regular_e52c81 _free_e52c81"
        data-test-disabled="false"
        data-test-id="seat"
        data-test-selected="false"
      >
        <span
          class="_seatPlace_e52c81"
          data-test-id="seat-place"
        />
      </div>
      <small
        class="_legendItemName_c11eeb"
        data-test-id="legend-item-name"
      >
        N/A
      </small>
    </li>
    <li
      class="_legendItem_c11eeb"
      data-test-id="legend-item"
    >
      <div
        class="_seat_e52c81 _legendItemSeat_c11eeb _regular_e52c81 _selected_e52c81"
        data-test-disabled="false"
        data-test-id="seat"
        data-test-selected="true"
      >
        <span
          class="_seatPlace_e52c81"
          data-test-id="seat-place"
        />
      </div>
      <small
        class="_legendItemName_c11eeb"
        data-test-id="legend-item-name"
      >
        Selected
      </small>
    </li>
    <li
      class="_legendItem_c11eeb"
      data-test-id="legend-item"
    >
      <div
        class="_seat_e52c81 _legendItemSeat_c11eeb _occupied_e52c81 _free_e52c81"
        data-test-disabled="true"
        data-test-id="seat"
        data-test-selected="false"
      >
        <span
          class="_seatPlace_e52c81"
          data-test-id="seat-place"
        />
      </div>
      <small
        class="_legendItemName_c11eeb"
        data-test-id="legend-item-name"
      >
        Occupied
      </small>
    </li>
  </ul>
</div>
`;
